--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -7,7 +7,7 @@
   margin-left: -250px;
   left: 250px;
   width: 250px;
-  background: #000;
+  background: #337ab7;
   position: fixed;
   height: 100%;
   overflow-y: auto;
@@ -44,7 +44,7 @@
 }
 
 .sidebar-nav li a {
-  color: #999999;
+  color: #286090;
   display: block;
   text-decoration: none;
 }
@@ -56,7 +56,7 @@
 
 .sidebar-nav li a:hover,
 .sidebar-nav li.active {
-  color: #fff;
+  color: #337ab7;
   background: rgba(255,255,255,0.2);
   text-decoration: none;
 }
