--- a/public/theme/dark.css
+++ b/public/theme/dark.css
@@ -1,12 +1,25 @@
+body{
+	background: #e6e6e6;
+}
+
 #sidebar-wrapper {
-  background: #000;
+	background: #000;
 }
 
 .sidebar-nav li a {
-  color: #999999;
+	color: #999999;
 }
 
 .sidebar-nav li a:hover,
 .sidebar-nav li.active {
-  color: #fff;
+	color: #fff;
+	background: rgba(255,255,255,0.2);
+}
+
+#menu-toggle {
+	color: #666666;
+}
+
+#menu-toggle:hover{
+	color: #000;
 }
