--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -39,8 +39,12 @@
 }
 
 .sidebar-nav li {
-  line-height: 40px;
+  line-height: 30px;
   text-indent: 5px;
+}
+
+.sidebar-nav li.divider hr{
+  margin: 0px 10px 0px 10px;
 }
 
 .sidebar-nav li a {
@@ -51,7 +55,7 @@
 
 .sidebar-nav li a span:before {
   text-align: center;
-  line-height: 40px;
+  line-height: 30px;
 }
 
 .sidebar-nav li a:hover,
@@ -63,6 +67,26 @@
 .sidebar-nav li a:active,
 .sidebar-nav li a:focus {
   text-decoration: none;
+}
+
+.sidebar-nav li.open a[aria-expanded~=true],
+.sidebar-nav li.dropdown a[aria-expanded~=false]{
+  background: none;
+}
+
+.sidebar-nav ul.dropdown-menu {
+  position: static;
+  float: none;
+  width: auto;
+  margin-top: 0;
+  background-color: transparent;
+  border: 0;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
+
+.sidebar-nav ul.dropdown-menu li{
+  text-indent: 25px;
 }
 
 .sidebar-nav > .sidebar-brand {
