--- a/public/theme/dark.css
+++ b/public/theme/dark.css
@@ -6,14 +6,19 @@ body{
 	background: #000;
 }
 
-.sidebar-nav li a {
+.sidebar-nav li a{
 	color: #999999;
 }
 
 .sidebar-nav li a:hover,
-.sidebar-nav li.active {
+.sidebar-nav li.active,
+.sidebar-nav li.dropdown a:hover{
 	color: #fff;
 	background: rgba(255,255,255,0.2);
+}
+
+.sidebar-nav li.divider hr{
+	 background-color: #333333; height: 1px; border: 0;
 }
 
 #menu-toggle {
