--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -15,6 +15,20 @@
   transition: all 0.4s ease 0s;
 }
 
+#sidebar-wrapper .user-panel {
+  height: 90px;
+  margin: 5px;
+}
+
+#sidebar-wrapper img{
+  width:60px;
+  height:60px;
+  border:4px solid #fff;
+  border-radius: 500px;
+  -webkit-border-radius: 500px;
+  -moz-border-radius: 500px;
+} 
+
 #wrapper.active {
   padding-left: 0;
 }
@@ -26,8 +40,6 @@
 #page-content-wrapper {
   width: 100%;
 }
-
-
 
 .sidebar-nav {
   position: absolute;
