--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -193,3 +193,16 @@
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+
+div.alert{
+  position:absolute;
+  z-index:1000;
+  right: 0;
+  bottom: 0;
+  padding: 5px 25px 0px 25px;
+}
+
+div.alert button.close span{
+  font-size:35px;
+  line-height: 15px;
+}
