--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -194,15 +194,15 @@
   100% { transform: rotate(360deg); }
 }
 
-div.alert{
-  position:absolute;
-  z-index:1000;
+div#alert-notif{
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  left: 0;
   right: 0;
-  bottom: 0;
-  padding: 5px 25px 0px 25px;
-}
-
-div.alert button.close span{
-  font-size:35px;
-  line-height: 15px;
+  max-width:500px;
+  height:auto;
+  margin: auto;
+  border-radius:0px 0px 5px 5px;
+  z-index: 9999;
 }
